--- a/_conf/nginx.conf
+++ b/_conf/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /dev/stderr notice;
 pid        /var/run/nginx.pid;
 
 
@@ -16,22 +16,39 @@ http {
     # Define custom log format to include reponse times
     map $http_x_forwarded_for $forwardexists {
       "" $remote_addr;
-      
+
       default $http_x_forwarded_for;
     }
 
     map $http_user_agent $not_kube {
       ~kube-probe 0;
-      
+
       default 1;
     }
 
-    log_format main_x_forw '$forwardexists - $remote_user [$time_local] "$request" '
-                           '$status $body_bytes_sent "$http_referer" '
-                           '"$http_user_agent" "$http_x_forwarded_for" '
-                           '$request_time $upstream_response_time $pipe $upstream_cache_status';
+    # Custom log format
+    log_format main_x_forw escape=json '{ '
+                                     '"@timestamp": "$time_iso8601", '
+                                     '"time_local_msec": "$time_local_ms", '
+                                     '"http_host": "$http_host", '
+                                     '"server_port": "$server_port", '
+                                     '"request_uri": "$request_uri", '
+                                     '"server_protocol": "$server_protocol", '
+                                     '"ssl_protocol": "$ssl_protocol", '
+                                     '"request_method": "$request_method", '
+                                     '"request_time": "$request_time", '
+                                     '"referrer": "$http_referer", '
+                                     '"body_bytes_sent": "$body_bytes_sent", '
+                                     '"status": "$status", '
+                                     '"clientip": "$forwardexists", '
+                                     '"http_user_agent": "$http_user_agent", '
+                                     '"remote_user": "$remote_user", '
+                                     '"upstream_resp_time": "$upstream_response_time", '
+                                     '"pipe": "$pipe", '
+                                     '"upstream_cache_status": "$upstream_cache_status"'
+                                     ' }';
 
-    access_log  /var/log/nginx/access.log  main_x_forw if=$not_kube;
+    access_log /dev/stdout main_x_forw if=$not_kube;
 
     sendfile        on;
     #tcp_nopush     on;
