--- a/_conf/nginx.conf
+++ b/_conf/nginx.conf
@@ -26,6 +26,8 @@ http {
       default 1;
     }
 
+    map "$time_local:$msec" $time_local_ms { ~(^\S+)(\s+\S+):\d+\.(\d+)$ $1.$3$2; }
+
     # Custom log format
     log_format main_x_forw escape=json '{ '
                                      '"@timestamp": "$time_iso8601", '
