--- a/_conf/nginx.conf
+++ b/_conf/nginx.conf
@@ -57,7 +57,40 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    server {
+        listen 80 default_server;
+        server_name _;
 
-    include /etc/nginx/conf.d/*.conf;
+        sendfile off;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        # Ignore logging of static files
+        location ~* \.(?:jpe?g|gif|png|css|js|ico|xml|woff2|ttf)$ {
+             access_log off;
+             expires 5d;
+            try_files $uri =404;
+        }
+
+        location ~ /\. {
+            log_not_found off;
+            deny all;
+        }
+    }
+
+    gzip on;
+    gzip_proxied any;
+    gzip_types text/plain application/xml text/css text/js text/xml application/x-javascript text/javascript application/json application/xml+rss;
+    gzip_vary on;
+    gzip_disable "msie6";
+
+    #include /etc/nginx/conf.d/*.conf;
 }
