--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -53,8 +53,8 @@ ingress:
     ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
     nginx.ingress.kubernetes.io/from-to-www-redirect: "false"
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: nginx
+    #kubernetes.io/tls-acme: "true"
   hosts:
     - host: sim.office.ru
       paths:
@@ -64,10 +64,10 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
-  #tls:
-  #  - secretName: sim-office-ru
-  #    hosts:
-  #      - sim.office.ru
+  tls:
+    - secretName: sim-office-ru
+      hosts:
+        - sim.office.ru
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
