--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -25,7 +25,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  - webhook-tested: "OK"
 
 podSecurityContext: {}
   # fsGroup: 2000
