--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -26,7 +26,7 @@ serviceAccount:
   name: ""
 
 podAnnotations:
-  - webhook-tested: "OK"
+  webhook-tested: "OK"
 
 podSecurityContext: {}
   # fsGroup: 2000
