--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -25,8 +25,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations:
-  webhook-tested: "OK"
+podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
