--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,12 +23,23 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ secrets.REGISTRY_URL }}/${GITHUB_REPOSITORY#*/}
+      
       - name: Get info
-        run: echo "${{ secrets.REGISTRY_URL }}/${GITHUB_REPOSITORY#*/}:${GITHUB_SHA:0:7}"
+        run: echo "${{ steps.meta.outputs.tags }}:${GITHUB_SHA:0:7}"
+        
+      - name: Metadata info
+        run: echo "${{ steps.meta.outputs.tags }}"
         
       - name: Build & push Docker image
         uses: docker/build-push-action@v3
         with:
+          context: .
+          file: Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: "${{ secrets.REGISTRY_URL }}/${GITHUB_REPOSITORY#*/}:${GITHUB_SHA:0:7}"
+          tags: "${{ steps.meta.outputs.tags }}:${GITHUB_SHA:0:7}"
