--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,6 +47,7 @@ jobs:
           propertyPath: 'image.repository'
           value: ${{ env.DOCKER_IMAGE }}
           updateFile: true
+          commitChange: false
           message: 'Update Repository to ${{ env.DOCKER_IMAGE }}'
           
       - name: Update Image Tag
@@ -56,5 +57,6 @@ jobs:
           propertyPath: 'image.tag'
           value: ${{ env.DOCKER_TAG }}
           updateFile: true
+          commitChange: true
           message: 'Update Tag to ${{ env.DOCKER_TAG }}'
     
