--- a/_conf/nginx.conf
+++ b/_conf/nginx.conf
@@ -75,8 +75,8 @@ http {
 
         # Ignore logging of static files
         location ~* \.(?:jpe?g|gif|png|css|js|ico|xml|woff2|ttf)$ {
-             access_log off;
-             expires 5d;
+            #access_log off;
+            expires 5d;
             try_files $uri =404;
         }
 
