Nginx config fixes

--- a/_conf/nginx.conf
+++ b/_conf/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  auto;
+worker_processes 1;
 
 error_log  /dev/stderr notice;
 pid        /var/run/nginx.pid;
@@ -60,11 +60,11 @@ http {
     server {
         listen 80 default_server;
         server_name _;
+        root   /usr/share/nginx/html;
 
         sendfile off;
 
         location / {
-            root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
 
@@ -75,7 +75,7 @@ http {
 
         # Ignore logging of static files
         location ~* \.(?:jpe?g|gif|png|css|js|ico|xml|woff2|ttf)$ {
-            #access_log off;
+            access_log off;
             expires 5d;
             try_files $uri =404;
         }
