--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -1,4 +1,5 @@
 replicaCount: 1
+revisionHistoryLimit: 1
 image:
   repository: registry.alexshangin.ru/sim-personal-data
   pullPolicy: IfNotPresent
